[package]
name = "soundstream"
version = "0.0.1"
description = "Extraction of all Ethereum events for address aef3e8c8723d9c31863be8de54df2668ef7c4b89, see https://etherscan.io/address/aef3e8c8723d9c31863be8de54df2668ef7c4b89"
edition = "2021"
# repository = ADD REPOSITORY URL HERE
# license = "Apache 2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-entity-change = "1.2.2"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
